samples/_failures_safe/1761310177_6a58f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f541735a.c: In function ‘main’:
./samples/SAFE/__tmp_f541735a.c:172:26: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  172 |     print_tokens(tokens, token
      |                          ^~~~~
      |                          Token
./samples/SAFE/__tmp_f541735a.c:172:26: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f541735a.c:172:31: error: expected ‘)’ at end of input
  172 |     print_tokens(tokens, token
      |                 ~             ^
      |                               )
./samples/SAFE/__tmp_f541735a.c:172:5: error: expected declaration or statement at end of input
  172 |     print_tokens(tokens, token
      |     ^~~~~~~~~~~~
